--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -94,6 +94,8 @@
     <ClCompile Include="source\main\Common.cpp" />
     <ClCompile Include="source\main\main.cpp" />
     <ClCompile Include="source\main\WinMain.cpp" />
+    <ClCompile Include="source\master\Data.cpp" />
+    <ClCompile Include="source\master\Master.cpp" />
     <ClCompile Include="source\scene\SceneAnim01.cpp" />
     <ClCompile Include="source\scene\SceneBlank.cpp" />
     <ClCompile Include="source\scene\SceneGame01.cpp" />
@@ -119,6 +121,8 @@
     <ClInclude Include="source\main\Common.h" />
     <ClInclude Include="source\main\main.h" />
     <ClInclude Include="source\main\WinMain.h" />
+    <ClInclude Include="source\master\Data.h" />
+    <ClInclude Include="source\master\Master.hpp" />
     <ClInclude Include="source\scene\SceneAnim01.h" />
     <ClInclude Include="source\scene\SceneBase.h" />
     <ClInclude Include="source\scene\SceneBlank.h" />
