--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="source\gimmick\Fountain.cpp">
       <Filter>source\gimmick</Filter>
     </ClCompile>
+    <ClCompile Include="source\gimmick\Enemy.cpp">
+      <Filter>source\gimmick</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
