笑いの追加

--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="source\gimmick\Shockers.cpp" />
     <ClCompile Include="source\gimmick\Shooter.cpp" />
     <ClCompile Include="source\gimmick\SpeedUp.cpp" />
+    <ClCompile Include="source\gimmick\waiwai.cpp" />
     <ClCompile Include="source\main\Common.cpp" />
     <ClCompile Include="source\main\main.cpp" />
     <ClCompile Include="source\main\WinMain.cpp" />
