それぞれのシーンをマスターデータでいじれるように

--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -103,11 +103,12 @@
     <ClCompile Include="source\master\AnimData.cpp" />
     <ClCompile Include="source\master\ChipData.cpp" />
     <ClCompile Include="source\master\Master.cpp" />
-    <ClCompile Include="source\master\SceneGame01Data.cpp" />
+    <ClCompile Include="source\master\SceneGameData.cpp" />
     <ClCompile Include="source\scene\SceneAnim01.cpp" />
     <ClCompile Include="source\scene\SceneBlank.cpp" />
     <ClCompile Include="source\scene\SceneGame01.cpp" />
     <ClCompile Include="source\scene\SceneGame02.cpp" />
+    <ClCompile Include="source\scene\SceneGame03.cpp" />
     <ClCompile Include="source\scene\SceneTitle.cpp" />
     <ClCompile Include="source\utility\BackGround.cpp" />
     <ClCompile Include="source\utility\Chip.cpp" />
@@ -133,12 +134,13 @@
     <ClInclude Include="source\master\AnimData.h" />
     <ClInclude Include="source\master\ChipData.h" />
     <ClInclude Include="source\master\Master.hpp" />
-    <ClInclude Include="source\master\SceneGame01Data.h" />
+    <ClInclude Include="source\master\SceneGameData.h" />
     <ClInclude Include="source\scene\SceneAnim01.h" />
     <ClInclude Include="source\scene\SceneBase.h" />
     <ClInclude Include="source\scene\SceneBlank.h" />
     <ClInclude Include="source\scene\SceneGame01.h" />
     <ClInclude Include="source\scene\SceneGame02.h" />
+    <ClInclude Include="source\scene\SceneGame03.h" />
     <ClInclude Include="source\scene\SceneTitle.h" />
     <ClInclude Include="source\utility\BackGround.h" />
     <ClInclude Include="source\utility\Chip.h" />
