--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -153,6 +153,12 @@
     <ClCompile Include="source\gimmick\Home.cpp">
       <Filter>source\gimmick</Filter>
     </ClCompile>
+    <ClCompile Include="source\sound\SoundBGM.cpp">
+      <Filter>source\sound</Filter>
+    </ClCompile>
+    <ClCompile Include="source\sound\SoundSE.cpp">
+      <Filter>source\sound</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -244,6 +250,12 @@
     </ClInclude>
     <ClInclude Include="source\scene\SceneGame03.h">
       <Filter>source\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="source\sound\SoundBGM.h">
+      <Filter>source\sound</Filter>
+    </ClInclude>
+    <ClInclude Include="source\sound\SoundSE.h">
+      <Filter>source\sound</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
